adding data to team tmpl

--- a/js/teams/teamTmpl.html
+++ b/js/teams/teamTmpl.html
@@ -1,11 +1,11 @@
 <div class="inner-container">
     <div class="logo">
-        <img ng-src="$__FIXME__$">
+        <img ng-src="{{logoPath}}">
     </div>
     <div class="record">
-        <h1> Wins: ???????? Losses: ???????? </h1>
+        <h1> Wins: {{teamData.wins}} Losses: {{teamData.losses}} </h1>
     </div>
-    <div class="btn" ng-click="$__FIXME__$"> Add a New Game </div>
+    <div class="btn" ng-click="submitGame"> Add a New Game </div>
     <form ng-show="$__FIXME__$" class="form">
         <span class="large"> Opponent: </span>
         <br />
