--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         </div>
 
         <!--the views get injected in the following element:-->
-        <div ui-view></div>
+        <div>
+            <ui-view></ui-view>
+        </div>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/mainCtrl.js"></script>
-    <script src="./js/defaultHeaders.js"></script>
-    <script src="./js/teams/teamCtrl.js"></script>
-    <script src="./js/teams/teamService.js"></script>
-    <script src="./js/home/homeCtrl.js"></script>
-    <script src="./js/home/homeService.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/mainCtrl.js"></script>
+    <script src="/js/defaultHeaders.js"></script>
+    <script src="/js/teams/teamCtrl.js"></script>
+    <script src="/js/teams/teamService.js"></script>
+    <script src="/js/home/homeCtrl.js"></script>
+    <script src="/js/home/homeService.js"></script>
 </body>
 
 </html>
