--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="/js/app.js"></script>
+        <script src="http://momentjs.com/downloads/moment.min.js"></script>
     <script src="/js/mainCtrl.js"></script>
     <script src="/js/defaultHeaders.js"></script>
     <script src="/js/teams/teamCtrl.js"></script>
