--- a/js/teams/teamTmpl.html
+++ b/js/teams/teamTmpl.html
@@ -2,7 +2,7 @@
     <div class="logo">
         <img ng-src="{{logoPath}}">
     </div>
-    {{test}}
+
     <div class="record">
         <h1> Wins: {{teamData.wins}} Losses: {{teamData.losses}} </h1>
     </div>
@@ -10,14 +10,16 @@
     <form ng-show="showNewGameForm" class="form">
         <span class="large"> Opponent: </span>
         <br />
-        <select ng-model="$__FIXME__$" ng-options="team for team in teams" class="form-control" required name="team"></select>
+        <select ng-model="newGame.opponent" ng-options="team for team in teams" class="form-control" required name="team"></select>
         <br />
         <span class="large"> Score: </span>
-        <br /> ????????:
-        <input class="inputs" type="text" ng-model="$__FIXME__$" placeholder="Home Score"> ????????:
-        <input type="text" class="inputs" ng-model="$__FIXME__$" placeholder="Opponent Score">
         <br />
-        <button ng-click="$__FIXME__$"> Submit Game </button>
+        {{homeTeam}}:
+        <input class="inputs" type="text" ng-model="newGame.homeTeamScore" placeholder="Home Score">
+        {{newGame.opponent}}:
+        <input type="text" class="inputs" ng-model="newGame.opponentScore" placeholder="Opponent Score">
+        <br />
+        <button ng-click="submitGame()"> Submit Game </button>
     </form>
     <div class="team-data">
         <div class="game" ng-repeat="game in teamData" ng-class="{'even' : $index % 2 === 0}">
@@ -26,9 +28,9 @@
         Utah Jazz - 103
         Houston Rockets - 100
       -->
-            Date: ????????
-            <br /> ???????? - ????????
-            <br /> ???????? - ????????
+            Date: {{game.createdAt}}
+            <br /> {{game.homeTeam}} - {{game.homeTeamScore}}
+            <br /> {{game.opponent}} - {{game.opponentScore}}
             </br />
         </div>
     </div>
